--- a/scripts/staging.yaml
+++ b/scripts/staging.yaml
@@ -65,5 +65,6 @@ branches:
   - gh/improve-queueing-repeaters # Graham Oct 22
   - jls/require-search-text # Jenny Oct 22
   - dmr/make-api-key-and-location-access-work-together  # Danny Oct 26
+  - gh/messaging-report
 
 submodules: {}
