--- a/scripts/staging.yaml
+++ b/scripts/staging.yaml
@@ -63,6 +63,7 @@ branches:
   - dependabot/pip/requirements/django-crispy-forms-1.9.2 # Jenny Oct 22
   - gh/improve-queueing-repeaters # Graham Oct 22
   - jls/require-search-text # Jenny Oct 22
+  - jls/combobox-select2 # Jenny Oct 28
   - gh/messaging-report # Graham Oct 27
 
 submodules: {}
