--- a/scripts/staging.yaml
+++ b/scripts/staging.yaml
@@ -65,5 +65,6 @@ branches:
   - jls/require-search-text # Jenny Oct 22
   - jls/combobox-select2 # Jenny Oct 28
   - gh/messaging-report # Graham Oct 27
+  - jls/wip # Jenny Nov 2
 
 submodules: {}
