--- a/.github/CODEOWNERS
+++ b/.github/CODEOWNERS
@@ -33,6 +33,8 @@
 /corehq/apps/commtrack/static/ @esoergel @orangejenny
 /corehq/apps/commtrack/templates/ @esoergel @orangejenny
 /corehq/apps/couch_sql_migration/ @millerdev
+/corehq/apps/domain/decorators.py @esoergel
+/corehq/apps/domain/auth.py @esoergel
 /corehq/apps/es/ @esoergel @proteusvacuum
 /corehq/apps/hqwebapp/ @orangejenny
 /corehq/apps/locations/ @esoergel
