--- a/scripts/staging.yaml
+++ b/scripts/staging.yaml
@@ -68,5 +68,6 @@ branches:
   - jls/fix-web-apps-tiles # Jenny Nov 6
   - adil-uddin:feature/USH-212-separate-permission-for-geocoder # Adil/Jenny Nov 6
   #- mr/safari_warnings # Matt Nov 6
+  - smh/bulk-download-web-users # Steph Nov 9
 
 submodules: {}
