--- a/scripts/staging.yaml
+++ b/scripts/staging.yaml
@@ -65,7 +65,7 @@ branches:
   - jls/combobox-select2 # Jenny Oct 28
   - nh/import_de  # Norman Nov 4
   - adil-uddin:feature/USH-212-separate-permission-for-geocoder # Adil/Jenny Nov 6
-  #- mr/safari_warnings # Matt Nov 6
+  - mr/safari_warnings # Matt Nov 6
   - smh/bulk-download-web-users # Steph Nov 9
   - dependabot/pip/requirements/uwsgi-2.0.19.1 # Daniel Nov 9
 
